# src/routes/index.ts
@@ -2,5 +2,6 @@ export { createGetDashboardStateHandler } from './getDashboardState.js';
 export { createGetEventsHandler } from './getEvents.js';
 export { createGetQueueHandler } from './getQueue.js';
 export { createGetSummaryHandler } from './getSummary.js';
+export { createGetTriggeredHandler } from './getTriggered.js';
 export { createGetQueueOrderHandler, createMoveQueueOrderHandler, createRetriggerNowHandler } from './queueOrderRoutes.js';
 export { createSetPausedHandler } from './setPaused.js';
